--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^18.2.0",
     "react-datepicker": "^6.3.0",
     "react-dom": "^18.2.0",
+    "react-number-format": "^5.3.4",
+    "react-number-picker": "^1.0.5",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "serve": "^14.2.1",
